--- a/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
@@ -9,7 +9,8 @@
                     :caption="$tc('sw-product.mediaForm.uploadCaption')"
                     :scrollTarget="$parent.$el"
                     @media-upload-success="successfulUpload"
-                    @new-upload="onNewUpload">
+                    @new-upload="onNewUpload"
+                    @sw-media-upload-open-sidebar="onMediaUploadButtonOpenSidebar">
             </sw-media-upload>
         {% endblock %}
 
