--- a/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
@@ -48,7 +48,7 @@
                 {% endblock %}
 
                 <template slot="card-view-sidebar">
-                    <sw-sidebar-media-item ref="sidebarMediaItem">
+                    <sw-sidebar-media-item ref="mediaSidebarItem">
                         <template slot="context-menu-items" slot-scope="media">
                             <sw-context-menu-item @click="onAddItemToProduct(media.mediaItem)">
                                 {{ $tc('sw-product.detailBase.labelContextMenuAddToProduct') }}
