NEXT-1207 - Refactor media items

--- a/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.less
@@ -5,11 +5,16 @@
 @sw-media-base-item-small-font-size:         @font-size-small;
 @sw-media-base-item-color-border:            @color-steam-cloud;
 @sw-media-base-item-color-text-inline-input: @color-gutenberg;
-@sw-media-base-item-color-details:           @color-gutenberg;
 @sw-media-base-item-color-context-button:    @color-white;
 @sw-media-base-item-color-loading-indicator: @color-gutenberg;
 @sw-media-base-item-color-hover:             @color-cadet-blue;
 @sw-media-base-item-color-metadata:          lighten(@color-gutenberg, 30);
+@sw-media-base-pseudo-padding:               25px;
+@sw-media-base-color-input-background:       @color-white;
+@sw-media-base-color-input-border:           @color-steam-cloud;
+@sw-media-base-border-radius-input:          @border-radius-default;
+@sw-media-base-color-selected:               @color-shopware-blue;
+@sw-media-color-checkmark:                   @color-white;
 
 .sw-media-base-item {
     position: relative;
@@ -18,6 +23,40 @@
 
     &:hover {
         background-color: @sw-media-base-item-color-hover;
+
+        .sw-media-item__selected-indicator {
+            visibility: visible;
+        }
+    }
+
+    .sw-media-item__selected-indicator {
+        display: grid;
+        visibility: hidden;
+        position: absolute;
+        top: @sw-media-base-pseudo-padding;
+        left: @sw-media-base-pseudo-padding;
+        width: 16px;
+        height: 16px;
+        background: @sw-media-base-color-input-background;
+        border: 1px solid @sw-media-base-color-input-border;
+        border-radius: @sw-media-base-border-radius-input;
+        z-index: 1;
+
+        &.selected-indicator--checked {
+            background: @sw-media-base-color-selected;
+            border: 1px solid @sw-media-base-color-selected;
+        }
+
+        .sw-icon {
+            color: @sw-media-color-checkmark;
+            position: relative;
+            top: -1px;
+            left: -1px;
+        }
+    }
+
+    .selected-indicator--visible {
+        visibility: visible;
     }
 
     .sw-context-button {
