--- a/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.html.twig
@@ -1,5 +1,19 @@
 {%  block sw_media_base_item %}
-    <div class="sw-media-base-item" :class="mediaItemClasses" @click="emitClickedEvent">
+    <div class="sw-media-base-item" :class="mediaItemClasses" @click="handleItemClick">
+        {% block sw_media_item_selected_indicator %}
+            <div v-if="!isList"
+                 class="sw-media-item__selected-indicator"
+                 :class="selectionIndicatorClasses"
+                 @click="doSelectItem">
+
+                <sw-icon
+                    v-if="listSelected"
+                    size="16px"
+                    name="small-default-checkmark-line-small">
+                </sw-icon>
+            </div>
+        {% endblock %}
+
         {% block sw_media_base_item_preview %}
             <slot name="media-item-preview">
                 {% block sw_media_base_item_slot_media_preview %}{% endblock %}
